# qdjango

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  README  README.md  qdjango.pri  qdjango.pro
cmake/: mingw32.toolchain
debian/: changelog  control  copyright  libqdjango-db0.install  libqdjango-dev.install  libqdjango-http0.install  libqdjango-script0.install  rules
doc/: Doxyfile  database.doc  http.doc  index.doc  models.doc  queries.doc  script.doc  scripting.doc
examples/: CMakeLists.txt  examples.pro
examples/http-server/: CMakeLists.txt  base.css  change_form.html  http-server.cpp  http-server.h  http-server.pro  http-server.qrc
examples/http-server/templates/: base.html  change_list.html  delete_confirmation.html  header.html  index.html
examples/script-console/: CMakeLists.txt  script-console.cpp  script-console.pro
src/: CMakeLists.txt  src.pri  src.pro
src/db/: CMakeLists.txt  QDjango.cpp  QDjango.h  QDjangoMetaModel.cpp  QDjangoMetaModel.h  QDjangoModel.cpp  QDjangoModel.h  QDjangoQuerySet.cpp  QDjangoQuerySet.h  QDjangoQuerySet_p.h  QDjangoValidator.cpp  QDjangoValidator.h  QDjangoWhere.cpp  QDjangoWhere.h  QDjangoWhere_p.h  QDjango_p.h  db.pro
src/http/: CMakeLists.txt  QDJangoTemplate.h  QDjangoFastCgiServer.cpp  QDjangoFastCgiServer.h  QDjangoFastCgiServer_p.h  QDjangoHttpController.cpp  QDjangoHttpController.h  QDjangoHttpRequest.cpp  QDjangoHttpRequest.h  QDjangoHttpRequest_p.h  QDjangoHttpResponse.cpp  QDjangoHttpResponse.h  QDjangoHttpResponse_p.h  QDjangoHttpServer.cpp  QDjangoHttpServer.h  QDjangoHttpServer_p.h  QDjangoHttpSession.cpp  QDjangoHttpSession.h  QDjangoHttpSessionStore.cpp  QDjangoHttpSessionStore.h  QDjangoHttp_p.h  QDjangoTemplate.cpp  QDjangoUrlResolver.cpp  QDjangoUrlResolver.h  http.pro
src/script/: CMakeLists.txt  QDjangoScript.cpp  QDjangoScript.h  QDjangoScript_p.h  script.pro
tests/: CMakeLists.txt  auth-models.cpp  auth-models.h  auth-tests.cpp  auth-tests.h  build-and-test  fields.cpp  fields.h  foreignkey.cpp  foreignkey.h  http.cpp  http.h  install-build-depends  main.cpp  main.h  main.js  run.py  script.cpp  script.h  shares-models.cpp  shares-models.h  shares-tests.cpp  shares-tests.h  tests.pri  tests.pro
tests/db/: auth-models.cpp  auth-models.h  auth-tests.cpp  auth-tests.h  db.pri  db.pro  fields.h  foreignkey.cpp  main.cpp  main.h  shares-models.h  util.cpp  util.h
tests/db/auth/: auth.pro  tst_auth.cpp
tests/db/many-to-one/: many-to-one.pro  models.cpp  models.h  tst_manytoone.cpp
tests/db/manytomany/: manytomany.pro  tst_manytomany.cpp
tests/db/qdjango/: qdjango.pro  tst_qdjango.cpp
tests/db/qdjangocompiler/: qdjangocompiler.pro  tst_qdjangocompiler.cpp  tst_qdjangocompiler.h
tests/db/qdjangometafield/: tst_qdjangometafield.cpp  tst_qdjangometafield.h
tests/db/qdjangometamodel/: qdjangometamodel.pro  tst_qdjangometamodel.cpp  tst_qdjangometamodel.h
tests/db/qdjangomodel/: qdjangomodel.pro  tst_qdjangomodel.cpp
tests/db/qdjangoqueryset/: qdjangoqueryset.pro  tst_qdjangoqueryset.cpp
tests/db/qdjangowhere/: qdjangowhere.pro  tst_qdjangowhere.cpp
tests/db/shares/: shares.pro  tst_shares.cpp
tests/db/validators/: tst_validators.cpp  validators.pro
tests/http/: http.cpp  http.h  http.pri  http.pro
tests/http/qdjangofastcgiserver/: qdjangofastcgiserver.pro  tst_qdjangofastcgiserver.cpp
tests/http/qdjangohttpcontroller/: qdjangohttpcontroller.pro  test.css  test.html  test.js  tst_qdjangohttpcontroller.cpp  tst_qdjangohttpcontroller.qrc
tests/http/qdjangohttprequest/: qdjangohttprequest.pro  tst_qdjangohttprequest.cpp
tests/http/qdjangohttpresponse/: qdjangohttpresponse.pro  tst_qdjangohttpresponse.cpp
tests/http/qdjangohttpserver/: qdjangohttpserver.pro  tst_qdjangohttpserver.cpp
tests/http/qdjangourlresolver/: qdjangourlresolver.pro  tst_qdjangourlresolver.cpp
tests/script/: script.cpp  script.h  script.pro  tst_qdjangoscript.cpp
tests/script/qdjangoscript/: qdjangoscript.pro  tst_qdjangoscript.cpp
tests/travis/: build-and-test  install-build-depends
