cmake_minimum_required(VERSION 2.6)

# Project and version
project(QDjango)
set(QDJANGO_VERSION_MAJOR 0)
set(QDJANGO_VERSION_MINOR 2)
set(QDJANGO_VERSION_PATCH 0)
set(QDJANGO_VERSION ${QDJANGO_VERSION_MAJOR}.${QDJANGO_VERSION_MINOR}.${QDJANGO_VERSION_PATCH})

find_package(Qt4 REQUIRED)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src/db)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src/http)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src/script)

add_subdirectory(src)
if(NOT QDJANGO_DONT_USE_TESTS)
    add_subdirectory(tests)
    add_subdirectory(examples)
endif()

# Packaging
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "qdjango")
set(CPACK_PACKAGE_VERSION_MAJOR ${QDJANGO_VERSION_MAJOR})
set(CPACK_PACKAGE_VERSION_MINOR ${QDJANGO_VERSION_MINOR})
set(CPACK_PACKAGE_VERSION_PATCH ${QDJANGO_VERSION_PATCH})

# Source package
set(CPACK_SOURCE_GENERATOR "TGZ")
set(CPACK_SOURCE_PACKAGE_FILE_NAME "qdjango-${QDJANGO_VERSION}")
list(APPEND CPACK_SOURCE_IGNORE_FILES "/.git/")
list(APPEND CPACK_SOURCE_IGNORE_FILES "${CMAKE_CURRENT_BINARY_DIR}")
