set(QT_DONT_USE_QTGUI 1)
set(QT_USE_QTNETWORK 1)
set(QT_USE_QTSCRIPT 1)
set(QT_USE_QTSQL 1)
include(${QT_USE_FILE})

# Build a shared library by default
if(NOT QDJANGO_LIBRARY_TYPE)
  set(QDJANGO_LIBRARY_TYPE SHARED)
endif()
if(QDJANGO_LIBRARY_TYPE STREQUAL "SHARED")
    add_definitions(-DQDJANGO_SHARED)
else()
    add_definitions(-DDJANGO_STATIC)
endif()
add_definitions(-DQDJANGO_BUILD)

add_subdirectory(db)
add_subdirectory(http)
add_subdirectory(script)
